--- a/contacts-ios/Contacts/ContactsTest/en.lproj/MainStoryboard.storyboard
+++ b/contacts-ios/Contacts/ContactsTest/en.lproj/MainStoryboard.storyboard
@@ -38,6 +38,19 @@
                                     <action selector="getContacts:" destination="2" eventType="touchUpInside" id="CKj-m2-gz2"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AnO-OB-FPS">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="getContactCount">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="getContactCountAction:" destination="2" eventType="touchUpInside" id="tOr-tq-utc"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -45,6 +58,8 @@
                             <constraint firstItem="mag-2E-bAD" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="NxO-L6-onV"/>
                             <constraint firstItem="mag-2E-bAD" firstAttribute="top" secondItem="Ozy-KM-OqO" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="WmE-vq-0P6"/>
                             <constraint firstItem="Ozy-KM-OqO" firstAttribute="centerX" secondItem="mag-2E-bAD" secondAttribute="centerX" type="default" id="fTJ-zL-Hym"/>
+                            <constraint firstItem="AnO-OB-FPS" firstAttribute="centerX" secondItem="Ozy-KM-OqO" secondAttribute="centerX" type="default" id="inW-c8-tli"/>
+                            <constraint firstItem="Ozy-KM-OqO" firstAttribute="top" secondItem="AnO-OB-FPS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="pLn-Jb-0p1"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -56,6 +71,7 @@
         <class className="ContactsTestViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsTestViewController.h"/>
             <relationships>
+                <relationship kind="action" name="getContactCountAction:"/>
                 <relationship kind="action" name="getContacts:"/>
                 <relationship kind="action" name="isModifiedAction:"/>
             </relationships>
