Adds support for Birthday, Creation and Modification dates.

--- a/contacts-air/contacts-debug/src/ContactsDebug.mxml
+++ b/contacts-air/contacts-debug/src/ContactsDebug.mxml
@@ -28,7 +28,7 @@
             var result:Array = Contacts.getInstance().getContacts(new com.github.rozd.ane.data.Range(0, 10));
 
             trace("elapsed:", getTimer() - t);
-
+            Date().setMilliseconds()
             bmd = result[0].thumbnail;
 
             trace(result[0].emails.length > 0 ? result[0].emails[0] : "");
