--- a/contacts-ios/Contacts/ContactsTest/en.lproj/MainStoryboard.storyboard
+++ b/contacts-ios/Contacts/ContactsTest/en.lproj/MainStoryboard.storyboard
@@ -36,6 +36,7 @@
                                 </state>
                                 <connections>
                                     <action selector="getContacts:" destination="2" eventType="touchUpInside" id="CKj-m2-gz2"/>
+                                    <action selector="getContactsAsync:" destination="2" eventType="touchUpInside" id="gJt-A8-a2T"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AnO-OB-FPS">
@@ -51,13 +52,43 @@
                                     <action selector="getContactCountAction:" destination="2" eventType="touchUpInside" id="tOr-tq-utc"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="huD-t6-PrI">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="getContactsAsync">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="getContactsAsync:" destination="2" eventType="touchUpInside" id="HdW-Lo-y9f"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2gl-Dj-mpp">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="pickGetContacts">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="pickGetContactsAction:" destination="2" eventType="touchUpInside" id="vH9-zy-1DF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="AnO-OB-FPS" firstAttribute="top" secondItem="huD-t6-PrI" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="59A-CE-OyL"/>
                             <constraint firstAttribute="bottom" secondItem="mag-2E-bAD" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="9Xs-lx-xgN"/>
-                            <constraint firstItem="mag-2E-bAD" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="NxO-L6-onV"/>
+                            <constraint firstItem="huD-t6-PrI" firstAttribute="top" secondItem="2gl-Dj-mpp" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="BNQ-7z-znu"/>
+                            <constraint firstItem="2gl-Dj-mpp" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="N6i-Ps-pJs"/>
                             <constraint firstItem="mag-2E-bAD" firstAttribute="top" secondItem="Ozy-KM-OqO" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="WmE-vq-0P6"/>
+                            <constraint firstItem="2gl-Dj-mpp" firstAttribute="centerX" secondItem="huD-t6-PrI" secondAttribute="centerX" type="default" id="Z6G-yW-Nk4"/>
                             <constraint firstItem="Ozy-KM-OqO" firstAttribute="centerX" secondItem="mag-2E-bAD" secondAttribute="centerX" type="default" id="fTJ-zL-Hym"/>
+                            <constraint firstItem="huD-t6-PrI" firstAttribute="centerX" secondItem="AnO-OB-FPS" secondAttribute="centerX" type="default" id="fXv-cZ-0ZL"/>
                             <constraint firstItem="AnO-OB-FPS" firstAttribute="centerX" secondItem="Ozy-KM-OqO" secondAttribute="centerX" type="default" id="inW-c8-tli"/>
                             <constraint firstItem="Ozy-KM-OqO" firstAttribute="top" secondItem="AnO-OB-FPS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="pLn-Jb-0p1"/>
                         </constraints>
@@ -67,19 +98,6 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="ContactsTestViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactsTestViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="getContactCountAction:"/>
-                <relationship kind="action" name="getContacts:"/>
-                <relationship kind="action" name="isModifiedAction:"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
