--- a/contacts-ios/Contacts/ContactsTest/en.lproj/MainStoryboard.storyboard
+++ b/contacts-ios/Contacts/ContactsTest/en.lproj/MainStoryboard.storyboard
@@ -78,18 +78,48 @@
                                     <action selector="pickGetContactsAction:" destination="2" eventType="touchUpInside" id="vH9-zy-1DF"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIG-lV-1RL">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="getContactCountAsync">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="getContactCountAsyncAction:" destination="2" eventType="touchUpInside" id="ngj-sX-mpJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zg0-CW-rs8">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="isModifiedAsync">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="isModifiedAsyncAction:" destination="2" eventType="touchUpInside" id="kpV-99-oW8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="AnO-OB-FPS" firstAttribute="top" secondItem="huD-t6-PrI" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="59A-CE-OyL"/>
                             <constraint firstAttribute="bottom" secondItem="mag-2E-bAD" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="9Xs-lx-xgN"/>
-                            <constraint firstItem="huD-t6-PrI" firstAttribute="top" secondItem="2gl-Dj-mpp" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="BNQ-7z-znu"/>
-                            <constraint firstItem="2gl-Dj-mpp" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="N6i-Ps-pJs"/>
+                            <constraint firstItem="AnO-OB-FPS" firstAttribute="centerX" secondItem="2gl-Dj-mpp" secondAttribute="centerX" type="default" id="Kuo-bs-Bn9"/>
+                            <constraint firstItem="Zg0-CW-rs8" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="L11-Nl-KIR"/>
+                            <constraint firstAttribute="bottom" secondItem="2gl-Dj-mpp" secondAttribute="bottom" constant="196" id="TYL-eQ-OaU"/>
                             <constraint firstItem="mag-2E-bAD" firstAttribute="top" secondItem="Ozy-KM-OqO" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="WmE-vq-0P6"/>
-                            <constraint firstItem="2gl-Dj-mpp" firstAttribute="centerX" secondItem="huD-t6-PrI" secondAttribute="centerX" type="default" id="Z6G-yW-Nk4"/>
+                            <constraint firstItem="huD-t6-PrI" firstAttribute="centerX" secondItem="bIG-lV-1RL" secondAttribute="centerX" type="default" id="XI2-3w-Dth"/>
+                            <constraint firstItem="huD-t6-PrI" firstAttribute="top" secondItem="Zg0-CW-rs8" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="bKt-PF-sFM"/>
+                            <constraint firstItem="Zg0-CW-rs8" firstAttribute="centerX" secondItem="huD-t6-PrI" secondAttribute="centerX" type="default" id="czW-pa-MdO"/>
                             <constraint firstItem="Ozy-KM-OqO" firstAttribute="centerX" secondItem="mag-2E-bAD" secondAttribute="centerX" type="default" id="fTJ-zL-Hym"/>
-                            <constraint firstItem="huD-t6-PrI" firstAttribute="centerX" secondItem="AnO-OB-FPS" secondAttribute="centerX" type="default" id="fXv-cZ-0ZL"/>
+                            <constraint firstItem="Zg0-CW-rs8" firstAttribute="top" secondItem="3" secondAttribute="top" constant="128" id="gF9-qh-M9x"/>
+                            <constraint firstItem="bIG-lV-1RL" firstAttribute="top" secondItem="huD-t6-PrI" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="hFl-6l-Tct"/>
                             <constraint firstItem="AnO-OB-FPS" firstAttribute="centerX" secondItem="Ozy-KM-OqO" secondAttribute="centerX" type="default" id="inW-c8-tli"/>
+                            <constraint firstItem="bIG-lV-1RL" firstAttribute="centerX" secondItem="2gl-Dj-mpp" secondAttribute="centerX" type="default" id="jPM-oG-mun"/>
                             <constraint firstItem="Ozy-KM-OqO" firstAttribute="top" secondItem="AnO-OB-FPS" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="pLn-Jb-0p1"/>
                         </constraints>
                     </view>
